# graphql-lsp-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASES.md  dist-workspace.toml  test-extension.sh  test-lsp.sh  test_goto_def.sh
.cargo/: config.toml
.changesets/: README.md  config.json
.claude/: CLAUDE.md  project-plan.md  repo-hygiene-complete.md  settings.json  setup-complete.md
.github/workflows/: audit.yml  ci.yml  deps.yml  vscode-release.yml
.husky/: Cargo.toml  README.md  pre-commit.sh
.husky/src/: lib.rs
crates/graphql-cli/: Cargo.toml  README.md
crates/graphql-cli/src/: apollo_client_builtins.graphql  main.rs
crates/graphql-cli/src/commands/: check.rs  lint.rs  mod.rs  validate.rs
crates/graphql-config/: Cargo.toml  README.md
crates/graphql-config/src/: config.rs  error.rs  lib.rs  loader.rs
crates/graphql-extract/: Cargo.toml  README.md
crates/graphql-extract/src/: error.rs  extractor.rs  language.rs  lib.rs  source_location.rs
crates/graphql-lsp/: Cargo.toml  README.md
crates/graphql-lsp/src/: main.rs  server.rs
crates/graphql-project/: Cargo.toml  README.md
crates/graphql-project/src/: completion.rs  diagnostics.rs  document.rs  error.rs  find_references.rs  goto_definition.rs  hover.rs  index.rs  lib.rs  line_index.rs  project.rs  schema.rs  validation.rs
crates/graphql-project/src/lint/: config.rs  linter.rs  mod.rs
crates/graphql-project/src/lint/rules/: deprecated.rs  mod.rs  unique_names.rs  unused_fields.rs
crates/graphql-project/tests/: project_validation.rs  validation_snapshots.rs
crates/graphql-project/tests/fixtures/: apollo_client_directives.tsx  fragment_user.graphql  fragment_with_posts.graphql  invalid_field.graphql  invalid_fragment.graphql  invalid_standalone_fragment.graphql  invalid_typescript.tsx  missing_argument.graphql  operation_with_fragment_spread.graphql  operation_with_nested_fragments.graphql  schema.graphql  standalone_fragment.graphql  typescript_with_fragments.tsx  valid_query.graphql  valid_typescript.tsx
crates/graphql-project/tests/snapshots/: validation_snapshots__apollo_client_directives_snapshot.snap  validation_snapshots__complex_nested_error_snapshot.snap  validation_snapshots__invalid_field_snapshot.snap  validation_snapshots__invalid_fragment_snapshot.snap  validation_snapshots__invalid_typescript_snapshot.snap  validation_snapshots__missing_argument_snapshot.snap  validation_snapshots__multiline_error_snapshot.snap  validation_snapshots__type_mismatch_snapshot.snap  validation_snapshots__undefined_fragment_snapshot.snap
editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: binaryManager.ts  extension.ts
editors/vscode/syntaxes/: graphql.injection.tmLanguage.json  graphql.tmLanguage.json
test-workspace/: README.md  example.graphql  example.tsx  graphql.config.yaml  package-lock.json  package.json  schema.graphql  tsconfig.json
