[workspace]
resolver = "2"
members = [
    "crates/graphql-config",
    "crates/graphql-extract",
    "crates/graphql-project",
    "crates/graphql-lsp",
    "crates/graphql-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trevor/graphql-lsp"
authors = ["Trevor"]

[workspace.dependencies]
# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"

# GraphQL
apollo-parser = "0.8"
apollo-compiler = "1.31"

# Async
tokio = { version = "1.0", features = ["full"] }

# LSP
tower-lsp-server = "0.22"
lsp-types = "0.97"

# CLI
clap = { version = "4.0", features = ["derive"] }

# File system
glob = "0.3"
walkdir = "2.0"
notify = "6.0"

# HTTP
reqwest = { version = "0.11", features = ["json"] }

swc_core = { version = "48.0", features = ["ecma_parser", "ecma_ast", "ecma_visit"] }
swc_common = "17.0"

# Utilities
dashmap = "5.0"
once_cell = "1.0"
