[workspace]
resolver = "2"
members = [
    "crates/graphql-config",
    "crates/graphql-extract",
    "crates/graphql-project",
    "crates/graphql-lsp",
    "crates/graphql-cli",
    ".husky",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trevor/graphql-lsp"
authors = ["Trevor"]

[workspace.dependencies]
# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
anyhow = "1.0"

# GraphQL
apollo-parser = "0.8"
apollo-compiler = { git = "https://github.com/trevor-scheer/apollo-rs.git", branch = "parse_with_offset" }

# Async
tokio = { version = "1.48", features = ["full"] }

# LSP
tower-lsp-server = "0.22"
lsp-types = "0.97"

# CLI
clap = { version = "4.5", features = ["derive"] }

# File system
glob = "0.3"
walkdir = "2.5"
notify = "8.2"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

swc_core = { version = "49.0", features = ["ecma_parser", "ecma_ast", "ecma_visit"] }
swc_common = "18.0"

# Utilities
dashmap = "6.1"
once_cell = "1.21"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
strip = true
opt-level = "z"
codegen-units = 1
