[package]
name = "graphql-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }

# For TypeScript/JavaScript parsing (disabled for now)
# Will re-enable with updated versions in Phase 4
# swc_core = { workspace = true, optional = true }
# swc_common = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
tempfile = "3.0"

[features]
default = []
# typescript feature disabled for now
# typescript = ["swc_core", "swc_common"]
