[package]
name = "graphql-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }
swc_core = { workspace = true }
swc_common = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tempfile = "3.0"
