[package]
name = "graphql-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.dist]
dist = false

[dependencies]
thiserror = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }
swc_common = { workspace = true }
swc_core = { workspace = true }

[dev-dependencies]
