[package]
name = "graphql-project"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Internal dependencies
graphql-config = { path = "../graphql-config" }
graphql-extract = { path = "../graphql-extract" }

# GraphQL parsing
apollo-parser = { workspace = true }
apollo-compiler = { workspace = true }

# Core utilities
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async
tokio = { workspace = true }

# File system
glob = { workspace = true }
walkdir = { workspace = true }
notify = { workspace = true }

# HTTP for schema introspection
reqwest = { workspace = true }

# Concurrency
dashmap = { workspace = true }

[dev-dependencies]
insta = { version = "1.44.1", features = ["yaml"] }
tempfile = "3.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
